frontend/test/should_pass/deque_identical_assignment.grg
using deque_model_001;

rule assi {
	a:A;
	
	modify {
		eval {
			a.niceDeque = a.niceDeque;
			a.spiceDeque = a.spiceDeque;
		}
	}
}
