frontend/test/should_fail/map_005b.grg
using map_model_001;

rule wrongKeyType {
	a:A;
	
	modify {
		eval {
			a.intToString = a.intToString \ set<int>{ a.stringValue };
		}
	}
}